--- a/step-11/apache.yml
+++ b/step-11/apache.yml
@@ -1,7 +1,9 @@
     - hosts: web
       tasks:
         - name: Updates apt cache
-          apt: update_cache=true
+          apt: update_cache=yes
+          tags:
+          - apk
 
         - name: Installs necessary packages
           apt: pkg={{ item }} state=latest
@@ -9,6 +11,8 @@
             - apache2
             - libapache2-mod-php5
             - git
+          tags:
+            - apk
 
         - name: Push future default virtual host configuration
           copy: src=files/awesome-app dest=/etc/apache2/sites-available/awesome-app.conf mode=0640
