--- a/Dockerfile-ansible
+++ b/Dockerfile-ansible
@@ -7,54 +7,25 @@
 # VERSION               0.0.1
 # From: https://hub.docker.com/r/williamyeh/ansible/~/dockerfile/
 
-FROM ubuntu/sshd:14.04
+FROM ubuntu/sshd:20.04
 
-MAINTAINER Nelson Goncalves <nelson.goncalves.fr@gmail.com>
+LABEL org.opencontainers.image.authors="Nelson Goncalves <nelson.goncalves.fr@gmail.com>"
 
 
-RUN echo "===> Adding Ansible's prerequisites..."   && \
-    apt-get update -y            && \
-    DEBIAN_FRONTEND=noninteractive  \
-        apt-get install --no-install-recommends -y -q  \
-                build-essential                        \
-                python-pip python-dev python-yaml      \
-                python-paramiko                        \
-                libxml2-dev libxslt1-dev zlib1g-dev    \
-                git                                 && \
-    pip install --upgrade pyyaml jinja2 pycrypto
-
-RUN echo "===> Downloading Ansible's source tree..." && \
-    git clone git://github.com/ansible/ansible.git --recursive && \
-    cd ansible                            && \
-    git checkout v2.3.3.0-1               && \
-    git submodule init                    && \
-    git submodule update                  && \
-    cd ..
-
-RUN echo "===> Compiling Ansible..."      && \
-    cd ansible                            && \
-    bash -c 'source ./hacking/env-setup'
-
-RUN echo "===> Moving useful Ansible stuff to /opt/ansible ..."  && \
-    mkdir -p /opt/ansible                && \
-    mv /ansible/bin   /opt/ansible/bin   && \
-    mv /ansible/lib   /opt/ansible/lib   && \
-    mv /ansible/docs  /opt/ansible/docs  && \
-    rm -rf /ansible
-
-RUN echo "===> Installing handy tools (not absolutely required)..."  && \
-    apt-get install -y sshpass openssh-client
-
-RUN echo "===> Clean up..."                                         && \
-    apt-get remove -y --auto-remove \
-            build-essential python-pip python-dev git               && \
-    apt-get clean                                                   && \
+RUN echo "===> Install ansible..."     && \
+    apt update -y                                     && \
+    apt upgrade -y                                    && \
+    DEBIAN_FRONTEND=noninteractive                       \
+        apt install --no-install-recommends -y -q        \
+                build-essential python3-pip              \
+                sshpass openssh-client                && \
+    pip install ansible==2.10.7                       && \
+    apt clean                                         && \
     rm -rf /var/lib/apt/lists/*
 
 RUN echo "===> Adding hosts for convenience..."  && \
     mkdir -p /etc/ansible                        && \
     echo 'localhost' > /etc/ansible/hosts
-
 
 ENV PATH        /opt/ansible/bin:$PATH
 ENV PYTHONPATH  /opt/ansible/lib:$PYTHONPATH
