--- a/ansible.cfg
+++ b/ansible.cfg
@@ -260,6 +260,8 @@ retry_files_save_path = ./.ansible-retry
 # set to 0 for unlimited (RAM may suffer!).
 #max_diff_size = 1048576
 
+interpreter_python=auto_silent
+
 [privilege_escalation]
 #become=True
 #become_method=sudo
