--- a/step-00/setup.yml
+++ b/step-00/setup.yml
@@ -4,43 +4,19 @@
   remote_user: root
 
   tasks:
-    # This should work too / #2372
-    # - name: Pushes user key to root's on vagrant boxes
-    #   action: authorized_key key=$FILE($item) user=root
-    #   first_available_file:
-    #     - ~/.ssh/id_dsa.pub
-    #     - ~/.ssh/id_rsa.pub
     - name: Is rsa file exists ?
       local_action: stat path=~/.ssh/id_rsa.pub
       run_once: true
       register: st_rsa
 
-    - name: Otherwise, is dsa file exists
-      local_action: stat path=~/.ssh/id_dsa.pub
-      run_once: true
-      register: st_dsa
-
     - local_action: fail msg="No key found (rsa or dsa), use tool ssh-keygen to create one"
       run_once: true
-      when: st_rsa.stat.exists == False and st_dsa.stat.exists == False
+      when: st_rsa.stat.exists == False
 
     - name: Creates destination directory
-      # Workaround for #2372
       file: state=directory mode=0700 dest=/root/.ssh/
 
     - name: Pushes user's rsa key to root's docker container (it's ok if this TASK fails)
-      # action: authorized_key user=root key='$FILE(~/.ssh/id_rsa.pub)'
-      # Workaround for #2372
       copy: src=~/.ssh/id_rsa.pub dest=/root/.ssh/authorized_keys owner=root mode=0600
       register: rsa
       ignore_errors: yes
-
-    - name: Pushes user's dsa key to root's docker container (it's NOT ok if both TASKs fail)
-      # action: authorized_key user=root key='$FILE(~/.ssh/id_dsa.pub)'
-      # Workaround for #2372
-      copy: src=~/.ssh/id_dsa.pub dest=/root/.ssh/authorized_keys owner=root mode=0600
-      when: rsa|failed
-
-    - name: Final greeting
-      pause: prompt="Don't worry about all the red above; if you made it here, your Docker containers are probably fine !
-        Please press [Enter]"
