--- a/step-04/apache.yml
+++ b/step-04/apache.yml
@@ -1,4 +1,7 @@
-    - hosts: web
-      tasks:
-        - name: Installs apache web server
-          apt: pkg=apache2 state=installed update_cache=true
+- hosts: web
+  tasks:
+    - name: Installs apache web server
+      apt:
+        pkg: apache2
+        state: present
+        update_cache: yes
