--- a/step-12/roles/apache/tasks/main.yml
+++ b/step-12/roles/apache/tasks/main.yml
@@ -1,45 +1,59 @@
-- name: Updates apt cache
-  apt: update_cache=true
-
 - name: Installs necessary packages
-  apt: pkg={{ item }} state=latest
-  with_items:
-    - apache2
-    - libapache2-mod-php5
-    - git
+  apt:
+    pkg:
+      - apache2
+      - libapache2-mod-php
+      - git
+    state: latest
+    update_cache: true
 
 - name: Push future default virtual host configuration
-  copy: src=awesome-app dest=/etc/apache2/sites-available/awesome-app.conf mode=0640
+  copy:
+    src: awesome-app
+    dest: /etc/apache2/sites-available/awesome-app.conf
+    mode: 0640
 
 - name: Activates our virtualhost
   command: a2ensite awesome-app
+  args:
+    creates: /etc/apache2/sites-enabled/awesome-app.conf
 
 - name: Check that our config is valid
   command: apache2ctl configtest
   register: result
   ignore_errors: True
+  changed_when: False
 
 - name: Rolling back - Restoring old default virtualhost
   command: a2ensite 000-default
-  when: result|failed
+  args:
+    creates: /etc/apache2/sites-enabled/000-default
+  when: result is failed
 
 - name: Rolling back - Removing out virtualhost
   command: a2dissite awesome-app
-  when: result|failed
+  when: result is failed
 
 - name: Rolling back - Ending playbook
-  fail: msg="Configuration file is not valid. Please check that before re-running the playbook."
-  when: result|failed
+  fail:
+    msg: Configuration file is not valid. Please check that before re-running the playbook.
+  when: result is failed
 
 - name: Deploy our awesome application
-  git: repo=https://github.com/leucos/ansible-tuto-demosite.git dest=/var/www/awesome-app
+  git:
+    repo: https://github.com/leucos/ansible-tuto-demosite.git
+    dest: /var/www/awesome-app
   tags: deploy
 
 - name: Deactivates the default virtualhost
   command: a2dissite 000-default
+  args:
+    removes: /etc/apache2/sites-enabled/000-default
 
 - name: Deactivates the default ssl virtualhost
   command: a2dissite default-ssl
+  args:
+    removes: /etc/apache2/sites-enabled/default-ssl
   notify:
     - restart apache
 
