--- a/step-12/site.yml
+++ b/step-12/site.yml
@@ -1,8 +1,8 @@
 - hosts: web
   roles:
-    - { role: apache }
+    - apache
 
 - hosts: haproxy
   roles:
-    - { role: haproxy }
+    - haproxy
 
